environments/bases/services/gateway.yaml
apiVersion: networking.istio.io/v1alpha3
kind: Gateway
metadata:
  name: public-gateway
  namespace: staging

spec:
  selector:
    istio: ingressgateway

  servers:
    - port:
        number: 80
        name: http
        protocol: HTTP
      hosts:
        - "*"
    # protocol: mysql disable by default needs to be activated in Pilot for security reason
---
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: java-demo-backend-virtual-service
  # namespace: staging # only used for DNS resolution, better using full DNS

spec:
  gateways:
    - public-gateway.staging.svc.cluster.local
  hosts:
    - "*"
    # - java-demo-backend-service.staging.svc.cluster.local

  http:
    - name: "java-demo-backend"
      route:
        - destination:
            host: java-demo-backend-service.staging.svc.cluster.local
            port:
              number: 8080
